# realtime-video-analytics-32streams

./: .dockerignore  .gitignore  Dockerfile  README.md  README_CN.md  README_EN.md  check_encoding.py  config_temporal_example.yaml  docker-compose-full.yaml  docker-compose.yaml  encoding_check_report.json  pylock.toml  pyproject.toml  sample-temporal-pipeline.yaml  simulate_data.py  tmp_index.txt  tmp_main.js  tmp_styles.txt
.claude/: settings.local.json
config/: demo-config.yaml  docker-multistream.yaml  pipeline-full.yaml  pipeline-local.yaml  pipeline-rtsp.yaml  pipeline-sim.yaml  sample-pipeline.yaml
docker/: run_dashboard.sh  run_pipeline.sh
docs/: TEMPORAL_DETECTION.md  deployment.md  inference_backends.md  kafka_workflow_cn.md  local_rtsp_demo.md  model_integration_cn.md
models/: README.md
scripts/: convert_temporal_model_to_onnx.py  rtsp-multistream.ps1  rtsp-multistream.sh  run_dashboard.py  run_pipeline.py  test_temporal_detector.py
src/realtime_analytics/: __init__.py  config.py  detector.py  ffmpeg_simulator.py  pipeline.py  temporal_detector.py  tracker.py  video_stream.py
src/realtime_analytics/api/: __init__.py  kafka_consumer.py  schemas.py  server.py  state.py
src/realtime_analytics/api/static/: charts.js  enhancements.css  enterprise-dashboard.html  index.html  main.js  mock-data.js  modern-dashboard.html  modern-ui.css  notifications.js  styles.css
src/realtime_analytics/sinks/: __init__.py  kafka_sink.py
src/realtime_analytics/telemetry/: __init__.py  metrics.py
src/realtime_analytics/utils/: __init__.py  frame_filter.py
